# vsdk

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  DEPLOY.md  DESIGN.md  EMULATOR_AUDIO_PLAN.md  Makefile  OTA.md  README.md  TODO.md  WORKBENCH.md  index.html  package-lock.json  package.json  regenerate-images.bat  regenerate-images.sh  requirements-remote-workbench.txt  requirements.txt  vs-emu.bat  vs-emu.sh  vs-regenerate-images.sh
apps/: bembi.py  credits.py  debugmode.py  director.py  imagedefs.py  imagenes.py  main.py  menu.py  regenerate-images.sh  remotepov.py  serialcomms.py  spritelib.py  ventap.py  ventilagon_game.py  vladfarty.py  vyruss.py
docs/: README.md  developers-guide.md  emulator-setup.Linux.md  emulator-setup.Windows.md  emulator-setup.macOS.md  emulator.md  input-protocol-v2.md  native-app-handoff.md  notes.md  ota-upgrade-plan.md  vs2-api-guide.md
emulator/: apa102.py  audio.py  base_control.py  build_voom_sounds.py  color_profile.py  comms.py  config.py  deepspace.py  display.py  emu.py  emu_audio.py  host_protocol.py  imagenes.py  inputs.py  inputs_common.py  mus2mid.py  native_render.py  ota_controls.py  package_manager.py  pitch-test.py  povcal_state.py  povperf_controls.py  povrender.py  pygletdraw.py  pygletengine.py  remote_gateway.py  remote_video.py  requirements.txt  scene_shader.py  (+6 more)
hardware/workbench/workbench_esp32s3/main/: CMakeLists.txt  config.h  hall_sim.c  hall_sim.h  idf_component.yml  led_capture.c  led_capture.h  reset_ctl.c  reset_ctl.h  serial_bridge.c  serial_bridge.h  telemetry.c  telemetry.h  workbench_main.c
(+558 files in other folders)
